# methodology-v2

./: .coverage  .coverage_governance.json  .coverage_json  .gitignore  .gitlab-ci.yml  .p2p_team_cache.json  AB_PHASE_TRIGGER.md  AI_AGENT_COMPARISON.md  ANONYMOUS_REPORT.md  ARCHITECTURE.md  AUDIT_REPORT_v6.28.md  AUDIT_v6.62_v7.38.md  AUTOMATED_CHECK_MECHANISMS.md  AUTOMATION_GAPS_REPORT.md  AUTO_RESEARCH_PROCESS_LOG.md  BUG_TRACKING.md  CHANGELOG.md  CHECKLIST.md  CODE_REVIEW_v6_61_v6_78.md  CODE_REVIEW_v6_61_v6_81_v2.md  CODE_REVIEW_v6_82.md  COMPONENT_IMPACT_ANALYSIS.md  CONTRIBUTING.md  CREWAI_INTEGRATION_PROPOSAL.md  DECISION_FRAMEWORK.md  DELIVERY_REPORT.md  DEPLOYMENT.md  DEVELOPMENT_LOG.md  ENFORCED_AB_WORKFLOW.md  ENVIRONMENT_DEPENDENCY.md  EXAMPLES_v5.26.md  FEATURE_BRANCH_STRUCTURE.md  FEATURE_DEVELOPMENT_WORKFLOW.md  FEATURE_INTEGRATION_LESSONS.md  FEATURE_INTEGRATION_PLAN.md  FEATURE_INTEGRATION_WORKFLOW.md  FINAL_5W1H_VERIFICATION_REPORT.md  FLOWCHART_AB_WORKFLOW.md  GETTING_STARTED_30MIN.md  GETTING_STARTED_v5.26.md  (+162 more)
.clai/: PROMPT_CODE_REVIEW.md
.methodology/: agent_hook_core.py  enforcement.json  execution_registry.db  policies_generated.py  roi_costs.db  roi_values.db  state.json
.quality_dashboard/: agent_history.json  auto_research.json  history.json
adapters/: __init__.py  phase_hooks_adapter.py  test_feature_10.py  test_wave1.py  test_wave2.py  test_wave3.py  test_wave4.py  wave2_features.py  wave3_features.py  wave4_features.py
adoption/: INTEGRATION_GUIDE.md  QUICK_WINS.md  VALUE_PROPOSITION.md
adr/: __init__.py  adr.py  registry.py
(+959 files in other folders)
